--- a/synthese/synthese.tex
+++ b/synthese/synthese.tex
@@ -24,6 +24,9 @@
 \section{Algorithme FIFO}
 \input{complexite_algo_fifo.tex}
 
+\section{Algorithme High Label}
+\input{complexite_algo_highest_label.tex}
+
 \bibliographystyle{plain}
 \bibliography{biblio}
 
